--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,10 @@ flutter:
     - assets/splash/qr_code_scanner2.png
     - assets/onboarding/
     - assets/navbar/
+    - assets/scan/
+    - assets/scan/qr-code.png
+    - assets/scan/qrcode_background.png
+    - assets/scan/scan.png
     # - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
